--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,13 @@
         android:layout_gravity="right|center_vertical"
         android:labelFor="@+id/amountEditText"
         android:text="@string/amount"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="0"
+        android:layout_column="0" />
 
     <EditText
         android:id="@+id/amountEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="256dp"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_row="0"
@@ -32,7 +34,7 @@
         android:maxLength="6" >
 
         <requestFocus />
-    </EditText>       
+    </EditText>
 
     <TextView
         android:id="@+id/amountDisplayTextView"
@@ -45,12 +47,14 @@
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView 
+    <TextView
         android:id="@+id/customPercentTextView"
         android:layout_width="wrap_content"
         android:layout_gravity="right|center_vertical"
         android:text="@string/custom_tip_percentage"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="1"
+        android:layout_column="0" />
 
     <SeekBar
         android:id="@+id/customTipSeekBar"
@@ -58,14 +62,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="fill_horizontal"
         android:max="30"
-        android:progress="18" />
+        android:progress="18"
+        android:layout_row="1"
+        android:layout_column="1" />
 
     <LinearLayout
         android:id="@+id/percentLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="2">
 
         <TextView
             android:id="@+id/percent15TextView"
@@ -91,13 +98,16 @@
         android:id="@+id/tipTextView"
         android:layout_gravity="right|center_vertical"
         android:text="@string/tip"
-        android:textAppearance="?android:attr/textAppearanceMedium"  />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="3"
+        android:layout_column="0" />
 
     <LinearLayout
         android:id="@+id/tipLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="3">
 
         <TextView
             android:id="@+id/tip15TextView"
@@ -108,7 +118,7 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -119,7 +129,7 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
@@ -128,13 +138,16 @@
         android:id="@+id/totalTextView"
         android:layout_gravity="right|center_vertical"
         android:text="@string/total"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="4"
+        android:layout_column="0" />
 
     <LinearLayout
         android:id="@+id/totalLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="4">
 
         <TextView
             android:id="@+id/total15TextView"
@@ -145,7 +158,7 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -156,10 +169,83 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
-    <Space />
 
+
+    <TextView
+        android:id="@+id/peopleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|center_vertical"
+        android:text="@string/people"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="5"
+        android:layout_column="0" />
+
+
+    <EditText
+        android:id="@+id/peopleEditText"
+        android:layout_width="256dp"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="5"
+        android:digits="0123456789"
+        android:inputType="number"
+        android:maxLength="6" />
+
+    <TextView
+        android:id="@+id/personNumDisplayTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="5"
+        android:background="@android:color/holo_blue_bright"
+        android:padding="@dimen/textview_padding"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/perTextView"
+        android:layout_gravity="right|center_vertical"
+        android:text="@string/per"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="6"
+        android:layout_column="0" />
+
+    <LinearLayout
+        android:id="@+id/perLinearLayout"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="6">
+
+        <TextView
+            android:id="@+id/per15TextView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginRight="@dimen/textview_margin"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_light"
+            android:gravity="center"
+            android:padding="@dimen/textview_padding"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/perCustomTextView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_light"
+            android:gravity="center"
+            android:padding="@dimen/textview_padding"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    </LinearLayout>
+
+    <Space />
 </GridLayout>
