--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/gridLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="2"
+    android:columnCount="5"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -25,30 +25,68 @@
         android:id="@+id/amountEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="1"
+        android:layout_column="4"
         android:layout_row="0"
         android:digits="0123456789"
         android:inputType="number"
         android:maxLength="6" >
 
         <requestFocus />
-    </EditText>       
+    </EditText>
 
     <TextView
         android:id="@+id/amountDisplayTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="1"
+        android:layout_column="4"
         android:layout_gravity="fill_horizontal"
         android:layout_row="0"
         android:background="@android:color/holo_blue_bright"
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView 
+    <Space />
+
+    <TextView
+        android:id="@+id/TextView02"
+        android:layout_width="208dp"
+        android:layout_height="wrap_content"
+        android:layout_column="4"
+        android:layout_gravity="left|top"
+        android:layout_row="1"
+        android:background="@android:color/holo_blue_bright"
+        android:padding="@dimen/textview_padding"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/peopelNumberText"
+        android:layout_width="194dp"
+        android:layout_height="wrap_content"
+        android:layout_column="4"
+        android:layout_gravity="left|top"
+        android:layout_row="1"
+        android:digits="0123456789"
+        android:ems="10"
+        android:inputType="number"
+        android:maxLength="10" />
+
+    <TextView
+        android:id="@+id/peopleNumberTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_gravity="right|top"
+        android:layout_row="1"
+        android:labelFor="@+id/amountEditText"
+        android:text="Number"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
         android:id="@+id/customPercentTextView"
         android:layout_width="wrap_content"
-        android:layout_gravity="right|center_vertical"
+        android:layout_column="0"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_row="2"
         android:text="@string/custom_tip_percentage"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -56,15 +94,17 @@
         android:id="@+id/customTipSeekBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="fill_horizontal"
+        android:layout_column="4"
+        android:layout_gravity="fill_horizontal|top"
+        android:layout_row="2"
         android:max="30"
         android:progress="18" />
-
+    
     <LinearLayout
         android:id="@+id/percentLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="1"
+        android:layout_column="4"
         android:layout_gravity="fill_horizontal" >
 
         <TextView
@@ -84,19 +124,20 @@
             android:gravity="center"
             android:text="@string/eighteen_percent"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
     </LinearLayout>
 
     <TextView
         android:id="@+id/tipTextView"
-        android:layout_gravity="right|center_vertical"
+        android:layout_column="0"
+        android:layout_gravity="right|top"
+        android:layout_row="4"
         android:text="@string/tip"
-        android:textAppearance="?android:attr/textAppearanceMedium"  />
-
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    
     <LinearLayout
         android:id="@+id/tipLinearLayout"
         android:layout_height="wrap_content"
-        android:layout_column="1"
+        android:layout_column="4"
         android:layout_gravity="fill_horizontal" >
 
         <TextView
@@ -108,7 +149,7 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -119,21 +160,22 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
     </LinearLayout>
 
     <TextView
         android:id="@+id/totalTextView"
-        android:layout_gravity="right|center_vertical"
+        android:layout_column="0"
+        android:layout_gravity="right|top"
+        android:layout_row="5"
         android:text="@string/total"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-
+    
     <LinearLayout
         android:id="@+id/totalLinearLayout"
         android:layout_height="wrap_content"
-        android:layout_column="1"
+        android:layout_column="4"
         android:layout_gravity="fill_horizontal" >
 
         <TextView
@@ -145,7 +187,7 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -156,10 +198,8 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
     </LinearLayout>
-    <Space />
 
 </GridLayout>
