--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,8 @@
         android:maxLength="6" >
 
         <requestFocus />
-    </EditText>       
+    </EditText>
+
 
     <TextView
         android:id="@+id/amountDisplayTextView"
@@ -44,6 +45,26 @@
         android:background="@android:color/holo_blue_bright"
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/partySizeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+    android:layout_gravity="right|center_vertical"
+        android:labelFor="@+id/amountEditText"
+        android:text="@string/partySize"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/partySizeEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="1"
+        android:digits="0123456789"
+        android:inputType="number"
+        android:maxLength="3" >
+    </EditText>
 
     <TextView 
         android:id="@+id/customPercentTextView"
@@ -160,6 +181,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
-    <Space />
+
+    <Space />
 
 </GridLayout>
