Add another text box to enter the number of people eating. If the user enters the number of people in the party (more than one), calculate and display the amount owed by each person if the total bill (amount +tip) were to be split evenly among the party members. Include the localization for China

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     android:useDefaultMargins="true"
     tools:context=".MainActivity" >
 
-    <TextView
+       <TextView
         android:id="@+id/amountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
         android:maxLength="6" >
 
         <requestFocus />
-    </EditText>       
+    </EditText>
 
     <TextView
         android:id="@+id/amountDisplayTextView"
@@ -41,6 +41,38 @@
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
         android:layout_row="0"
+        android:background="@android:color/holo_blue_bright"
+        android:padding="@dimen/textview_padding"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    <TextView
+        android:id="@+id/partyNumTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|center_vertical"
+        android:labelFor="@+id/amountEditText"
+        android:text="@string/party_num"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/partyNumEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="1"
+        android:digits="0123456789"
+        android:inputType="number"
+        android:maxLength="6" >
+
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/partyNumDisplayTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="1"
         android:background="@android:color/holo_blue_bright"
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -87,11 +119,13 @@
 
     </LinearLayout>
 
+
+
     <TextView
         android:id="@+id/tipTextView"
         android:layout_gravity="right|center_vertical"
         android:text="@string/tip"
-        android:textAppearance="?android:attr/textAppearanceMedium"  />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <LinearLayout
         android:id="@+id/tipLinearLayout"
@@ -123,21 +157,20 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
-
     <TextView
-        android:id="@+id/totalTextView"
+        android:id="@+id/averageTextView"
         android:layout_gravity="right|center_vertical"
-        android:text="@string/total"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:text="@string/average"
+        android:textAppearance="?android:attr/textAppearanceMedium"  />
 
     <LinearLayout
-        android:id="@+id/totalLinearLayout"
+        android:id="@+id/averageLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal" >
 
         <TextView
-            android:id="@+id/total15TextView"
+            android:id="@+id/average15TextView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -145,21 +178,21 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
-            android:id="@+id/totalCustomTextView"
+            android:id="@+id/averageCustomTextView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="@dimen/textview_padding"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
-    <Space />
+    <Space />
 
 </GridLayout>
